internal/compiler/testdata/fuzz/crashers/2c5fbc12c9322fd6d9aa3a418f3e7ff290b17df5.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x53b6b2]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0x0, 0xc000024a80, 0xc000084688, 0x38, 0x3)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000a8000, 0xc000014360, 0x0, 0xc000084848, 0x5016e2)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000a8580, 0x1, 0x5a2820, 0x5a2820, 0xc000024a80)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c260, 0xc0000a8b00, 0x99, 0x5a2820, 0xc000024900, 0xc000084af0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c260, 0xc00005e1e0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xb, 0xc000084b40)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x223
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c260, 0xc0000a6000, 0x40b616, 0xc000024b00, 0x40, 0x38)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c260, 0xc0000a6000, 0x0, 0xc000084c60, 0x411143, 0xc000024b00)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x127
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c260, 0xc0000a4000, 0x0, 0x2, 0xc00001436b, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c260, 0xc0000a2000, 0x0, 0x2, 0xc00001436b, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c260, 0xc0000a2000, 0x0, 0x0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x7f00bba40000, 0xa, 0xa, 0x4)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00004ff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2